# docling-mcp-server

./: .gitignore  README.md  claude_desktop_config.json  pyproject.toml  requirements.txt  setup.py  test_docling_server.py
mcp_docling/: __init__.py  __main__.py  server.py
