[project]
name = "mcp-docling"
version = "0.1.0"
description = "MCP Server for Docling document conversion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
mcp-docling = "mcp_docling:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_docling"] 